Fix text alignment

--- a/src/pages/CharacterDetail/index.scss
+++ b/src/pages/CharacterDetail/index.scss
@@ -90,6 +90,7 @@
       0 0 24px var(--theme-element-glow-transparent);
     letter-spacing: 0.05em;
     position: relative;
+    text-align: left;
   }
 }
 
